ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mying
spec:
  tls:
  - hosts:
    - aneesh.com
    secretName: myapping
  ingressClassName: nginx
  rules:
  - host: aneesh.com
    http:
      paths:
      - backend:
          service:
            name: mydep-svc
            port:
              number: 80
        path: /
        pathType: Exact

  - host: ankit.com
    http:
      paths:
      - backend:
          service:
            name: ankitapp
            port:
              number: 80
        path: /
        pathType: Exact
