ingress/ing2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: mying
spec:
  rules:
  - host: aneesh.com
    http:
      paths:
      - backend:
          service:
            name: svc1
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - aneesh.com
    secretName: myapptls
status:
  loadBalancer: {}
